@@ -1,4 +1,4 @@
-# Copyright 1999-2008 Gentoo Foundation
+# Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 # $Header: /var/cvsroot/gentoo-x86/app-emulation/vmware-player/vmware-player-1.0.6.80404.ebuild,v 1.1 2008/03/22 10:45:35 ikelos Exp $
 
@@ -34,7 +34,7 @@ RDEPEND="sys-libs/glibc
 		x11-libs/libXcursor
 		x11-libs/libXinerama
 		x11-libs/libXi
-		virtual/xft )
+		x11-libs/libXft )
 	>=dev-lang/perl-5
 	!app-emulation/vmware-workstation
 	!app-emulation/vmware-server
