@@ -23,6 +23,6 @@ DIST VMware-server-1.0.8-126538.tar.gz 107047809 RMD160 9a1bb74accd2b3e8a84933f9
 DIST VMware-server-2.0.0-122956.i386.tar.gz 565247832 RMD160 c800f11b079b1fe701814df43edacb1195c68db7 SHA1 3532a115e9c4e64144684af4af182bf4ab685c7a SHA256 da9ca9286c36ed0e3402cd9a8a65983f843d2dc16d03c847a4576d45ea5ff8f0
 DIST VMware-server-2.0.0-122956.x86_64.tar.gz 533570301 RMD160 cfe59d36995121bc03e805f8e3154f4b282adfe4 SHA1 f1ffdaeb8307cfc0ed7ee083aba6a66194e99301 SHA256 901de3cb6232beb20d3fdf7399154785955d87214e15d9fbc869255429a6938b
 DIST vmware-server-perl-fixed-rpath-libs.tar.bz2 73834 RMD160 7f64627b5b945e8d7dabe39c165a4b66b71fb4d3 SHA1 9d696750ca3ec92b31ca8112fd80dcd832494044 SHA256 c42299dd033187c67b45b739da66583fbd94cdcba745200b89a25ac96cd9364b
-EBUILD vmware-server-1.0.8.126538.ebuild 2994 RMD160 b111c706165c7a43b0ff000dc997bce2a9664330 SHA1 06b4294f1f05fbeb029b05262df94db35e3ec22a SHA256 b0f4024cc0e376fbdc0a6f19b4e9e0939fb032fbb5e74692b859d017b280bae1
-EBUILD vmware-server-2.0.0.122956.ebuild 2565 RMD160 34617586568994ad1258ed7cdac8bad1caa623e1 SHA1 bf1f86051b376fad8ec646893e887bffe131ff40 SHA256 d061e71db4b8d15e349f4c29ef6d54bf7678edc59232c4a03a124b9a27ba86b3
+EBUILD vmware-server-1.0.8.126538.ebuild 2998 RMD160 95006d3a17b1d65f0db20eb270794bed9578d86a SHA1 edda11715fc9b8f6a7347943c104f85bb0160447 SHA256 464009074577f7cce49ba92161ae5e69b30c96dabad196b5d1758516d42ed1aa
+EBUILD vmware-server-2.0.0.122956.ebuild 2569 RMD160 b4898d0cc4ffd9c15bdfe40e512a19c4bf1a3297 SHA1 17e7f4713a105131b6cccc29f502c94ae84f1797 SHA256 bba3558b6759305b188688a5768737781b400b51c1959cb965b135ed81363d36
 MISC metadata.xml 159 RMD160 fc7f68a382390e5916b0fb43f37a893fad4f9798 SHA1 f46b02a39bcd0165558de67ff4256cfc812418a3 SHA256 8581ae1c90a48f50fa0542c7fb28cb8984baaf12f50fa18f33e467081effb215
