@@ -22,5 +22,5 @@ DIST VMware-Workstation-6.5.1-126130.i386.bundle 395045565 RMD160 b06aacfa606a1e
 DIST VMware-Workstation-6.5.1-126130.x86_64.bundle 361697489 RMD160 30762c062ef2f68d60240fb55163b20d3769b2ac SHA1 03fd6fcf3ab55f8f465d04bb6348ea8323a71be9 SHA256 31f6cc9abbad715ebf9f8e9938871dd0f35eaa92b21b5b2f46c4396537dfa2b0
 DIST VMware-workstation-5.5.9-126128.tar.gz 111649803 RMD160 a5a867761d36c9a02821f8dd639a95b8c9ab38bc SHA1 eb8786111a74213ea4ec24636a4ba70b7f5dc741 SHA256 71a062e29480a48647c7323883e4e4b43a9365c1bb70000a23b768647db46444
 DIST vmware-any-any-update115.tar.gz 493641 RMD160 56cabe56f70c01a22a7671e861cc5a2df19855c7 SHA1 ff9b6fdf6ca74495eb5f4822a1854fc91185377c SHA256 b1c14fa9514663b85c2efe8331407e71cce96e5a21a8b941fa570c960bbdcaa1
-EBUILD vmware-workstation-5.5.9.126128.ebuild 3247 RMD160 a619054c3c4318362f30e6ca10047b54c0dd6f6a SHA1 053e1cfd70208934063fbaab49581f7907381b5f SHA256 6470238fc76ab279dfb01ee2b13a4d32ff29d4f96aa9c5d094a09a786de4a214
-EBUILD vmware-workstation-6.5.1.126130.ebuild 5530 RMD160 101638bc4e3b0defca8028088e5e575770e34451 SHA1 f413e2ddb2dcbb2d7a907160dda46b3f879900c3 SHA256 73894185ac3ac8fb4a3aa4475476b59e23b15cbf58f1c427fd14fd3281b808f5
+EBUILD vmware-workstation-5.5.9.126128.ebuild 3251 RMD160 3b3502ba20150a69a756843d1bc49021cf4e47b6 SHA1 8f57621b3abdf88b18c441ccc588594c039eac77 SHA256 573f59a56ebb36d6328c1d350720692df37e51a6e2fe2b32b80f9a48b54dfda7
+EBUILD vmware-workstation-6.5.1.126130.ebuild 5542 RMD160 28edcd7e8adda0d48537349dc9ee1b30feb0c027 SHA1 f96edf3b2e9d26ada7451d424e55543f4a6eb0f3 SHA256 7e3484796eb7aafcf591492ef2df625c85a36a157716eee802918aeb52a6c7dd
