@@ -2,6 +2,15 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $ Id: $
 
+  11 Jan 2009; Mike Auty <ikelos@gentoo.org>
+  app-emulation/vmware-server/vmware-server-1.0.8.126538.ebuild,
+  app-emulation/vmware-player/vmware-player-1.0.9.126128.ebuild,
+  app-emulation/vmware-server/vmware-server-2.0.0.122956.ebuild,
+  app-emulation/vmware-player/vmware-player-2.5.1.126130.ebuild,
+  app-emulation/vmware-workstation/vmware-workstation-5.5.9.126128.ebuild,
+  app-emulation/vmware-workstation/vmware-workstation-6.5.1.126130.ebuild:
+  Remove virtual/xft to keep in sync with the main tree.
+
   10 Jan 2009; Mike Auty <ikelos@gentoo.org> -eclass/vmware.eclass,
   -eclass/vmware-mod.eclass:
   Sync with tree and remove eclasses.
